--- a/admin/users.html
+++ b/admin/users.html
@@ -78,8 +78,8 @@
         <!-- Top Navbar -->
         <header class="top-navbar d-flex align-items-center justify-content-between mb-4 mt-0">
             <div class="d-flex align-items-center">
-                <button class="btn btn-light d-lg-none me-2" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
-                    <i class="fas fa-bars"></i>
+                <button class="menu-toggle d-lg-none me-3" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
+                    <i class="fas fa-bars-staggered"></i>
                 </button>
                 <h4 class="m-0 d-none d-md-block">User Management</h4>
             </div>
