--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
         </div>
 
         <form action="verify-code.html">
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.25rem;">
+            <div class="register-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.25rem;">
                 <div class="form-group">
                     <label>First Name</label>
                     <input type="text" placeholder="John" required>
