--- a/dashboard/kyc.html
+++ b/dashboard/kyc.html
@@ -25,6 +25,7 @@
 
         <nav class="nav flex-column">
             <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
             <a href="kyc.html" class="nav-link active"><i class="fas fa-user-shield"></i> KYC Verification</a>
             <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
             <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -50,6 +51,7 @@
         <div class="offcanvas-body">
             <nav class="nav flex-column">
                 <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
                 <a href="kyc.html" class="nav-link active"><i class="fas fa-user-shield"></i> KYC Verification</a>
                 <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
                 <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
