--- a/admin/settings.html
+++ b/admin/settings.html
@@ -33,8 +33,10 @@
             <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Management <span
                     class="badge bg-danger rounded-pill ms-auto">5</span></a>
             <a href="transactions.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Transactions</a>
+            <a href="p2p.html" class="nav-link"><i class="fas fa-handshake"></i> P2P Management</a>
             <a href="rates.html" class="nav-link"><i class="fas fa-chart-line"></i> Rates</a>
             <a href="broadcast.html" class="nav-link"><i class="fas fa-bullhorn"></i> Broadcast</a>
+            <a href="agents.html" class="nav-link"><i class="fas fa-user-tie"></i> Agents</a>
             <hr class="my-3 opacity-10">
             <a href="settings.html" class="nav-link active"><i class="fas fa-cog"></i> Settings</a>
         </nav>
@@ -61,8 +63,10 @@
                 <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Management <span
                         class="badge bg-danger rounded-pill ms-auto">5</span></a>
                 <a href="transactions.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Transactions</a>
+                <a href="p2p.html" class="nav-link"><i class="fas fa-handshake"></i> P2P Management</a>
                 <a href="rates.html" class="nav-link"><i class="fas fa-chart-line"></i> Rates</a>
                 <a href="broadcast.html" class="nav-link"><i class="fas fa-bullhorn"></i> Broadcast</a>
+                <a href="agents.html" class="nav-link"><i class="fas fa-user-tie"></i> Agents</a>
                 <hr class="my-3 opacity-10">
                 <a href="settings.html" class="nav-link active"><i class="fas fa-cog"></i> Settings</a>
                 <a href="../login.html" class="nav-link text-danger mt-4"><i class="fas fa-sign-out-alt"></i> Logout</a>
@@ -75,34 +79,13 @@
         <!-- Top Navbar -->
         <header class="top-navbar d-flex align-items-center justify-content-between mb-4 mt-0">
             <div class="d-flex align-items-center">
-                <button class="btn btn-light d-lg-none me-2" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
-                    <i class="fas fa-bars"></i>
+                <button class="menu-toggle d-lg-none me-3" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu">
+                    <i class="fas fa-bars-staggered"></i>
                 </button>
                 <h4 class="m-0 d-none d-md-block">Settings</h4>
             </div>
 
             <div class="d-flex align-items-center gap-3">
-                <div class="dropdown">
-                    <button class="btn btn-light position-relative" data-bs-toggle="dropdown">
-                        <i class="fas fa-bell"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                            style="font-size: 0.6rem;">1</span>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-end shadow border-0" style="width: 300px;">
-                        <h6 class="dropdown-header">Notifications</h6>
-                        <a class="dropdown-item py-3 border-bottom" href="#">
-                            <div class="d-flex align-items-center">
-                                <div class="bg-primary-subtle text-primary p-2 rounded-circle me-3"><i
-                                        class="fas fa-user-check"></i></div>
-                                <div>
-                                    <p class="mb-0 small fw-bold">New KYC Submission</p>
-                                    <small class="text-muted">John Doe submitted his ID</small>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="dropdown-item text-center small text-primary" href="#">View all</a>
-                    </div>
-                </div>
 
                 <div class="dropdown">
                     <div class="d-flex align-items-center gap-2 cursor-pointer" data-bs-toggle="dropdown">
