--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -32,6 +32,7 @@
 
         <nav class="nav flex-column">
             <a href="index.html" class="nav-link active"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
             <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
             <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
             <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -57,6 +58,7 @@
         <div class="offcanvas-body">
             <nav class="nav flex-column">
                 <a href="index.html" class="nav-link active"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
                 <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
                 <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
                 <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -78,27 +80,6 @@
             </div>
 
             <div class="d-flex align-items-center gap-3">
-                <div class="dropdown">
-                    <button class="btn btn-light position-relative" data-bs-toggle="dropdown">
-                        <i class="fas fa-bell"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                            style="font-size: 0.6rem;">3</span>
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-end shadow border-0" style="width: 300px;">
-                        <h6 class="dropdown-header">Notifications</h6>
-                        <a class="dropdown-item py-3 border-bottom" href="#">
-                            <div class="d-flex align-items-center">
-                                <div class="bg-success-subtle text-success p-2 rounded-circle me-3"><i
-                                        class="fas fa-check"></i></div>
-                                <div>
-                                    <p class="mb-0 small fw-bold">KYC Approved</p>
-                                    <small class="text-muted">Your identity has been verified.</small>
-                                </div>
-                            </div>
-                        </a>
-                        <a class="dropdown-item text-center small text-primary" href="#">View all</a>
-                    </div>
-                </div>
 
                 <div class="dropdown">
                     <div class="d-flex align-items-center gap-2 cursor-pointer" data-bs-toggle="dropdown">
@@ -174,37 +155,47 @@
                     <thead>
                         <tr>
                             <th>Date</th>
+                            <th>Transaction ID</th>
                             <th>Type</th>
                             <th>Method</th>
+                            <th>Asset</th>
                             <th>Amount</th>
                             <th>Status</th>
-                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
+                        <!-- CR: Deposit -->
                         <tr>
                             <td>Oct 20, 2023 - 14:30</td>
-                            <td><span class="text-success"><i class="fas fa-arrow-down me-1"></i> Deposit</span></td>
+                            <td class="text-secondary small">TXN-9988221100</td>
+                            <td><span class="text-success fw-bold"><i class="fas fa-arrow-down me-1"></i> Deriv
+                                    Deposit</span></td>
                             <td>Bank Transfer</td>
-                            <td class="fw-bold">₦25,000.00</td>
+                            <td class="text-muted">UGT (USD)</td>
+                            <td class="fw-bold">$250.00</td>
                             <td><span class="badge-status status-approved">Approved</span></td>
-                            <td><button class="btn btn-sm btn-light"><i class="fas fa-eye"></i></button></td>
                         </tr>
+                        <!-- CR: Withdrawal -->
                         <tr>
                             <td>Oct 19, 2023 - 09:12</td>
-                            <td><span class="text-danger"><i class="fas fa-arrow-up me-1"></i> Withdrawal</span></td>
-                            <td>Crypto (USDT)</td>
-                            <td class="fw-bold">₦150,000.00</td>
+                            <td class="text-secondary small">TXN-9988221101</td>
+                            <td><span class="text-danger fw-bold"><i class="fas fa-arrow-up me-1"></i> Deriv
+                                    Withdrawal</span></td>
+                            <td>Crypto Payout</td>
+                            <td class="text-muted">USDT (TRC20)</td>
+                            <td class="fw-bold">$105.00</td>
                             <td><span class="badge-status status-pending">Pending</span></td>
-                            <td><button class="btn btn-sm btn-light"><i class="fas fa-eye"></i></button></td>
                         </tr>
+                        <!-- P2P: Buy -->
                         <tr>
-                            <td>Oct 18, 2023 - 21:05</td>
-                            <td><span class="text-success"><i class="fas fa-arrow-down me-1"></i> Deposit</span></td>
-                            <td>Card Payment</td>
-                            <td class="fw-bold">₦10,000.00</td>
+                            <td>Oct 18, 2023 - 11:15</td>
+                            <td class="text-secondary small">P2P-1122334455</td>
+                            <td><span class="text-success fw-bold"><i class="fas fa-plus-circle me-1"></i> Crypto
+                                    Buy</span></td>
+                            <td>Bank Transfer</td>
+                            <td class="text-muted">USDT (BEP20)</td>
+                            <td class="fw-bold">$500.00</td>
                             <td><span class="badge-status status-approved">Approved</span></td>
-                            <td><button class="btn btn-sm btn-light"><i class="fas fa-eye"></i></button></td>
                         </tr>
                     </tbody>
                 </table>
