--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -25,6 +25,7 @@
 
         <nav class="nav flex-column">
             <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
             <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
             <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
             <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -50,6 +51,7 @@
         <div class="offcanvas-body">
             <nav class="nav flex-column">
                 <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
                 <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
                 <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
                 <a href="withdraw.html" class="nav-link"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -68,6 +70,7 @@
                 </button>
                 <h4 class="m-0">Profile & Settings</h4>
             </div>
+
         </header>
         <!-- Sticky Header for Profile -->
         <div class="sticky-header mb-4">
@@ -85,24 +88,24 @@
             <div class="col-lg-3">
                 <div class="card border-0 shadow-sm p-2 sticky-top" style="top: 150px;">
                     <div class="nav flex-column nav-pills custom-pills" id="v-pills-tab" role="tablist">
-                        <button class="nav-link active d-flex align-items-center gap-3 py-3" data-bs-toggle="pill"
-                            data-bs-target="#info">
+                        <button class="nav-link active d-flex align-items-center gap-3 py-3" id="tab-info"
+                            data-bs-toggle="pill" data-bs-target="#info">
                             <i class="fas fa-user-circle fs-5"></i>
                             <div class="text-start">
                                 <p class="mb-0 fw-bold">Personal Profile</p>
                                 <small class="opacity-75">Basic account details</small>
                             </div>
                         </button>
-                        <button class="nav-link d-flex align-items-center gap-3 py-3" data-bs-toggle="pill"
-                            data-bs-target="#security">
+                        <button class="nav-link d-flex align-items-center gap-3 py-3" id="tab-security"
+                            data-bs-toggle="pill" data-bs-target="#security">
                             <i class="fas fa-shield-halved fs-5"></i>
                             <div class="text-start">
                                 <p class="mb-0 fw-bold">Security Center</p>
                                 <small class="opacity-75">Passwords & 2FA</small>
                             </div>
                         </button>
-                        <button class="nav-link d-flex align-items-center gap-3 py-3" data-bs-toggle="pill"
-                            data-bs-target="#payout">
+                        <button class="nav-link d-flex align-items-center gap-3 py-3" id="tab-payout"
+                            data-bs-toggle="pill" data-bs-target="#payout">
                             <i class="fas fa-wallet fs-5"></i>
                             <div class="text-start">
                                 <p class="mb-0 fw-bold">Payout Rails</p>
@@ -143,19 +146,34 @@
                             <form class="row g-3">
                                 <div class="col-md-6">
                                     <label class="form-label small fw-bold text-muted text-uppercase">First Name</label>
-                                    <input type="text" class="form-control" value="John">
+                                    <input type="text" class="form-control bg-light" value="John" readonly>
                                 </div>
                                 <div class="col-md-6">
                                     <label class="form-label small fw-bold text-muted text-uppercase">Last Name</label>
-                                    <input type="text" class="form-control" value="Doe">
+                                    <input type="text" class="form-control bg-light" value="Doe" readonly>
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="form-label small fw-bold text-muted text-uppercase">Email
+                                        Address</label>
+                                    <input type="email" class="form-control bg-light" value="john.doe@example.com"
+                                        readonly>
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="form-label small fw-bold text-muted text-uppercase">Phone
+                                        Number</label>
+                                    <input type="text" class="form-control bg-light" value="+234 812 345 6789" readonly>
                                 </div>
                                 <div class="col-md-12">
                                     <label class="form-label small fw-bold text-muted text-uppercase">Residential
                                         Address</label>
-                                    <input type="text" class="form-control" value="123 Alpha Estate, Lagos, Nigeria">
+                                    <input type="text" class="form-control bg-light"
+                                        value="123 Alpha Estate, Lagos, Nigeria" readonly>
                                 </div>
-                                <div class="col-12 mt-4">
-                                    <button class="btn btn-primary px-5 py-2">Update Profile</button>
+                                <div class="col-12 mt-2">
+                                    <div class="alert alert-info small mb-0">
+                                        <i class="fas fa-info-circle me-1"></i> To modify these details, please contact
+                                        <a href="#" class="fw-bold">Support</a>.
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -218,8 +236,7 @@
                         <div class="card border-0 shadow-sm p-4">
                             <div class="d-flex justify-content-between align-items-center mb-4">
                                 <h5 class="fw-bold mb-0">Bank Accounts</h5>
-                                <button class="btn btn-sm btn-primary-light" data-bs-toggle="modal"
-                                    data-bs-target="#addBankModal">
+                                <button class="btn btn-sm btn-primary-light" onclick="openPayoutModal('addBankModal')">
                                     <i class="fas fa-plus me-1"></i> Add Bank
                                 </button>
                             </div>
@@ -244,8 +261,8 @@
 
                             <div class="d-flex justify-content-between align-items-center mb-4">
                                 <h5 class="fw-bold mb-0">Crypto Wallets</h5>
-                                <button class="btn btn-sm btn-primary-light" data-bs-toggle="modal"
-                                    data-bs-target="#addCryptoModal">
+                                <button class="btn btn-sm btn-primary-light"
+                                    onclick="openPayoutModal('addCryptoModal')">
                                     <i class="fas fa-plus me-1"></i> Link Wallet
                                 </button>
                             </div>
@@ -358,6 +375,56 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Check for hash in URL and activate corresponding tab OR modal
+            const hash = window.location.hash;
+
+            // Tab Logic
+            if (['#info', '#security', '#payout'].includes(hash)) {
+                const tabId = hash.substring(1);
+                const tabButton = $(`button[data-bs-target="#${tabId}"]`);
+                if (tabButton.length) new bootstrap.Tab(tabButton[0]).show();
+            }
+
+            // Modal Logic
+            const modalMap = {
+                '#add-crypto': 'addCryptoModal',
+                '#add-bank': 'addBankModal'
+            };
+
+            if (modalMap[hash]) {
+                // Ensure we are on the payout tab first
+                const payoutTabBtn = document.querySelector('button[data-bs-target="#payout"]');
+                if (payoutTabBtn) new bootstrap.Tab(payoutTabBtn).show();
+
+                // Open Modal
+                const modalId = modalMap[hash];
+                const modal = new bootstrap.Modal(document.getElementById(modalId));
+                modal.show();
+            }
+
+            // Listeners
+            $('.modal').on('show.bs.modal', function () {
+                const modalId = $(this).attr('id');
+                const h = Object.keys(modalMap).find(key => modalMap[key] === modalId);
+                if (h) history.pushState(null, null, h);
+            });
+
+            $('.modal').on('hide.bs.modal', function () {
+                // When these specific modals close, go back to #payout hash
+                const modalId = $(this).attr('id');
+                if (Object.values(modalMap).includes(modalId)) {
+                    history.pushState(null, null, '#payout');
+                }
+            });
+        });
+
+        function openPayoutModal(modalId) {
+            const modal = new bootstrap.Modal(document.getElementById(modalId));
+            modal.show();
+        }
+    </script>
     <style>
         .nav-tabs .nav-link.active {
             color: #10b981 !important;
