--- a/dashboard/withdraw.html
+++ b/dashboard/withdraw.html
@@ -25,6 +25,7 @@
 
         <nav class="nav flex-column">
             <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
             <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
             <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
             <a href="withdraw.html" class="nav-link active"><i class="fas fa-money-bill-transfer"></i> Withdrawals</a>
@@ -50,6 +51,7 @@
         <div class="offcanvas-body">
             <nav class="nav flex-column">
                 <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Dashboard</a>
+                <a href="p2p.html" class="nav-link"><i class="fas fa-exchange-alt"></i> Crypto Transaction</a>
                 <a href="kyc.html" class="nav-link"><i class="fas fa-user-shield"></i> KYC Verification</a>
                 <a href="deposit.html" class="nav-link"><i class="fas fa-wallet"></i> Deposits</a>
                 <a href="withdraw.html" class="nav-link active"><i class="fas fa-money-bill-transfer"></i>
@@ -69,9 +71,9 @@
                 </button>
                 <h4 class="m-0">Withdraw Funds</h4>
             </div>
-            <div class="balance-badge bg-white shadow-sm px-3 py-2 rounded-pill border d-none">
-                <small class="text-muted d-block" style="font-size: 0.6rem; line-height: 1;">Available Balance</small>
-                <span class="fw-bold text-success">₦4,250,000.00</span>
+            <!-- Dynamic Rate/Balance Badge -->
+            <div id="dynamicHeaderBadge" class="balance-badge bg-white shadow-sm px-3 py-2 rounded-pill border d-none">
+                <span class="fw-bold text-success" id="realtimeBalanceDisplay">$4,250.00</span>
             </div>
         </header>
 
@@ -96,6 +98,11 @@
                                         <span class="input-group-text bg-light border-end-0">$</span>
                                         <input type="number" class="form-control border-start-0" id="withdrawAmount"
                                             placeholder="Min. 10.00">
+                                    </div>
+                                    <!-- Real-time calculation -->
+                                    <div class="mt-2 text-start">
+                                        <small class="text-muted">You will receive: <span class="fw-bold text-success"
+                                                id="receivePreview">₦0.00</span></small>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
@@ -130,14 +137,9 @@
                             <div class="d-flex flex-column gap-2 mb-4">
                                 <div
                                     class="alert alert-success d-flex align-items-center justify-content-between small py-2 fw-bold mb-0">
-                                    <span><i class="fas fa-check-circle me-2"></i> CR Verified: <span
-                                            id="verifiedCrLabel">CR1234567</span></span>
+                                    <span><i class="fas fa-check-circle me-2"></i> Verified: John Doe <span
+                                            class="text-muted ms-1" id="verifiedCrLabel">CR1234567</span></span>
                                     <span class="badge bg-white text-success shadow-sm">Active</span>
-                                </div>
-                                <div
-                                    class="p-3 bg-primary-soft rounded-3 border border-primary-subtle d-flex justify-content-between align-items-center">
-                                    <span class="text-muted small fw-bold text-uppercase">Available Balance</span>
-                                    <span class="h4 mb-0 fw-800 text-primary">$4,250.50</span>
                                 </div>
                             </div>
 
@@ -197,13 +199,25 @@
                                         <label class="form-label small fw-bold">Select Target Asset</label>
                                         <select class="form-select">
                                             <option>USDT (TRC20)</option>
-                                            <option>USDC (BEP20)</option>
+                                            <option>USDT (ERC20)</option>
+                                            <option>USDT (BEP20)</option>
+                                            <option>USDC (Solana)</option>
+                                            <option>Bitcoin (BTC)</option>
+                                            <option>Litecoin (LTC)</option>
                                         </select>
                                     </div>
                                     <div class="col-md-12">
                                         <label class="form-label small fw-bold">Target Wallet Address</label>
-                                        <input type="text" class="form-control" value="0x892...3ac" readonly>
-                                        <small class="text-muted">Linked address from your profile.</small>
+                                        <input type="text" class="form-control" placeholder="Paste wallet address here">
+                                        <small class="text-muted">Or <a href="profile.html#payout">select from saved
+                                                wallets</a></small>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="alert alert-danger small mb-0">
+                                            <i class="fas fa-radiation-alt me-1"></i> <b>Liability Disclaimer:</b>
+                                            Ensure the address matches the network. The company is not liable for funds
+                                            sent to wrong addresses.
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -222,8 +236,8 @@
                             <div class="d-flex gap-2">
                                 <button type="button" class="btn btn-light px-4" id="backToStep1">Back</button>
                                 <button type="button" class="btn btn-primary flex-grow-1 py-3 fw-bold"
-                                    data-bs-toggle="modal" data-bs-target="#payoutOtpModal">
-                                    Finalize Withdrawal
+                                    id="finalPayoutBtn" data-bs-toggle="modal" data-bs-target="#payoutOtpModal">
+                                    Confirm Naira Payout
                                 </button>
                             </div>
                         </div>
@@ -261,23 +275,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function () {
-            // Apply green focus styling to form controls
-            $('input.form-control, select.form-select').on('focus', function () {
-                $(this).css('border-color', '#10b981').css('box-shadow', '0 0 0 0.25rem rgba(16, 185, 129, 0.25)');
-            }).on('blur', function () {
-                $(this).css('border-color', '').css('box-shadow', '');
+            const payoutRate = 1490;
+
+            // --- HASH BASED MODAL PERSISTENCE ---
+            const modalMap = {
+                '#payout-otp': 'payoutOtpModal'
+            };
+
+            // 1. Check Hash on Load
+            const currentHash = window.location.hash;
+            if (modalMap[currentHash]) {
+                const modalId = modalMap[currentHash];
+                const modal = new bootstrap.Modal(document.getElementById(modalId));
+                modal.show();
+            }
+
+            // 2. Update Hash on Modal Show/Hide
+            $('.modal').on('show.bs.modal', function () {
+                const modalId = $(this).attr('id');
+                const hash = Object.keys(modalMap).find(key => modalMap[key] === modalId);
+                if (hash) history.pushState(null, null, hash);
+            });
+
+            $('.modal').on('hide.bs.modal', function () {
+                history.pushState(null, null, ' ');
+            });
+
+            // Step 1: Real-time Calc
+            $('#withdrawAmount').on('input', function () {
+                const usd = parseFloat($(this).val()) || 0;
+                const ngn = usd * payoutRate;
+                $('#receivePreview').text('₦' + ngn.toLocaleString(undefined, { minimumFractionDigits: 2 }));
             });
 
             $('#verifyCrBtn').click(function () {
                 const cr = $('#targetCr').val();
                 const amount = parseFloat($('#withdrawAmount').val());
 
-                if (!cr) {
-                    alert('Please enter CR number');
-                    return;
-                }
-                if (isNaN(amount) || amount <= 0) {
-                    alert('Please enter a valid withdrawal amount');
+                if (!cr || !amount) {
+                    alert('Please enter valid details');
                     return;
                 }
 
@@ -288,8 +324,10 @@
                     $('#loadingStep').addClass('d-none');
                     $('#step2').removeClass('d-none').hide().fadeIn();
                     $('#verifiedCrLabel').text(cr);
-                    // Trigger amount calculation after verification
-                    $('#withdrawAmount').trigger('input');
+                    $('#dynamicHeaderBadge').removeClass('d-none'); // Show balance only after verify
+
+                    // Trigger amount to update summary
+                    updateSummary(amount);
                 }, 2000);
             });
 
@@ -299,27 +337,24 @@
             });
 
             $('input[name="withdrawMethod"]').change(function () {
-                if (this.value === 'bank') {
-                    $('#bankWithdrawal').removeClass('d-none').hide().fadeIn();
-                    $('#cryptoWithdrawal').addClass('d-none');
-                } else {
+                const isCrypto = this.value === 'crypto';
+                if (isCrypto) {
                     $('#bankWithdrawal').addClass('d-none');
                     $('#cryptoWithdrawal').removeClass('d-none').hide().fadeIn();
+                    $('#finalPayoutBtn').text('Confirm Crypto Payout');
+                } else {
+                    $('#bankWithdrawal').removeClass('d-none').hide().fadeIn();
+                    $('#cryptoWithdrawal').addClass('d-none');
+                    $('#finalPayoutBtn').text('Confirm Naira Payout');
                 }
             });
 
-            $('#withdrawAmount').on('input', function () {
-                const amount = parseFloat($(this).val()) || 0;
-                if (amount >= 1000) {
-                    $('#thresholdNotice').removeClass('d-none');
-                } else {
-                    $('#thresholdNotice').addClass('d-none');
-                }
+            function updateSummary(amount) {
                 const fee = amount * 0.015;
                 const total = amount - fee;
-                $('#feeDisplay').text('$' + fee.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }));
-                $('#totalPayoutDisplay').text('$' + total.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }));
-            });
+                $('#feeDisplay').text('$' + fee.toLocaleString(undefined, { minimumFractionDigits: 2 }));
+                $('#totalPayoutDisplay').text('$' + total.toLocaleString(undefined, { minimumFractionDigits: 2 }));
+            }
 
             $('#otpFields input').on('input', function () {
                 if (this.value.length >= 1) {
